Updating CV and Body text
Updated CV and Timeline items and corrected typos in body text of About page. Also removed one block quote that was causing formatting issues.

--- a/CV.html
+++ b/CV.html
@@ -91,6 +91,7 @@
           <li><strong>B.S., Zoology, Ecology, and Behavior</strong> Auburn University 2015</li>
         </ul>
       </p>
+
       <h3>Teaching and Outreach</h3>
       <p>
         <ul>
@@ -102,6 +103,7 @@
           <li><strong>Outreach Assistant</strong>, Alabama Natural Heritage Foundation, 2015</li>
         </ul>
       </p>
+
       <h3>Research</h3>
       <p>
         <ul>
@@ -125,18 +127,79 @@
 
         </ul>
       </p>
+
       <h3>Publications</h3>
       <p>
         <ul>
-            <li><strong>McDaniels, G. M.</strong>, K. T. McDaniels, G. R. Cline, C. A. Murdock, and J. R. Rayburn. 2020. The phenology of the symbiotic association between <i>Ambystoma maculatum</i> and unicellular algae (<i>Oophila</i>) using molecular techniques. Journal of Herpetology 54(4).</li>
+            <li><strong>McDaniels, G. M.</strong>, K. T. McDaniels, G. R. Cline, C. A. Murdock, and J. R. Rayburn. 2020. The phenology of the symbiotic association between <i>Ambystoma maculatum</i> and unicellular algae (<i>Oophila</i>) using molecular techniques. Journal of Herpetology 54(4). <a href="https://doi.org/10.1670/19-143">https://doi.org/10.1670/19-143</a></li>
             <li><strong>McDaniels, G. M.</strong>, K. T. McDaniels, and G. R. Cline. 2020. <i>Ambystoma maculatum</i> (Spotted salamander) Polyembryony. Herpetological Review 51(3).</li>
         </ul>
-      <h5>In prep</h5>
+      </p>
+
+      <h3>Oral Presentations</h3>
+      <p>
         <ul>
-            <li><strong>McDaniels, G. M.</strong>, M. R. Douglas, T. K. Chafin, W. J. Anthonysamy, and M. E. Douglas. Multivariate analysis of Western rattlesnake climate niches (<i>Crotalus viridis</i> and <i>C. oreganus</i>: Viperidae).</li>
-            <li>McDaniels, K. M., M. R. Douglas, M. A. Davis, <strong>G. M. McDaniels</strong>, and M. E. Douglas. Morphological head shape variation in whiptail subspecies (<i>Aspidoscelis spp.</i>) and their hybrids.</li>
+          <li><strong>McDaniels, G. M.</strong>, K. T. McDaniels, G. R. Cline, C. A. Murdock, and J. R. Rayburn. 2020. Phenology of the symbiotic relationship between Ambystoma maculatum and Oophila amblystomatis using molecular techniques. -American Fisheries Society symposium on eDNA, Little Rock, AR</li>
+          <li><strong>McDaniels, G. M.</strong>, K. T. McDaniels, G. R. Cline, C. A. Murdock, and J. R. Rayburn. 2019. Phenology of the symbiotic relationship between Ambystoma maculatum and Oophila amblystomatis using molecular techniques. -Association of Southeastern Biologists, Memphis, TN</li>
         </ul>
-        </p>
+      </p>
+
+      <h3>Poster Presentations</h3>
+      <p>
+        <ul>
+          <li>Canturbury, D., S. Elliott, K. T. McDaniels, and <strong>G. M. McDaniels</strong>. 2019. Preliminary study of culturable bacteria from the mouths of individuals from the family Natricinae in Northern Alabama. -Alabama Partners in Amphibian and Reptile Conservation, Nauvoo, AL.</li>
+          <li><strong>McDaniels, G. M.</strong>, and G. R. Cline. 2018. Putative effects of recent drought on reproductive ecology of several reptile and amphibian populations in Northeast Alabama. -Southeastern Partners in Amphibian Conservation conference, Helen, GA.</li>
+          <li><strong>McDaniels, G. M.</strong>, and G. R. Cline. 2017. Clutch Data and Hatchling Morphometrics in the Queen Snake, Regina septemvitatta . -Student Symposium, Jacksonville State University, Jacksonville, AL.</li>
+          <li><strong>McDaniels, G. M.</strong>, and G. R. Cline. 2016. An eDNA approach to investigating the ecology and timing of the endosymbioticrelationship between the Spotter Salamander (Ambystoma maculatum) and green algae. -Southeastern Partners in AmphibianConservation, Nauvoo, AL.</li>
+        </ul>
+      </p>
+
+      <h3>Skills</h3>
+      <p>
+        <ul>
+          <li>Lab and Cell Procedures: DNA isolation, eDNA filtration and extraction, media pretp, plate streaking, PCR primer design</li>
+          <li>Museum specimen preparation and preservation</li>
+          <li>Safe wildlife trapping and handling, including venomous snake certification (Rattlesnake Conservancy 2018)</li>
+          <li>Data organization and visualization</li>
+          <li>Uni- and multivariate statistics</li>
+          <li>Geometric morphometric analysis of shape</li>
+          <li>Programming in Unix, R, and Python</li>
+          <li>ArcGIS: raster analysis, interpolation, and cartography</li>
+          <li>Cluster computing</li>
+          <li>Genomic sequence data organization and manipulation</li>
+        </ul>
+      </p>
+
+      <h3>Professional Service and Synergy</h3>
+      <p>
+        <ul>
+          <li>Part of two-person team developing Course-based Undergraduate Research Experience (CURE) labs for Ecology at JSU</li>
+          <li>Served on Biology Department Head search committee & organized graduate student participation at JSU</li>
+          <li>Part of two-person team that organized and lobbied graduate teaching assistant contract revision and pay increase with Dean of School of Science at JSU</li>
+          <li>Trained new Biology GTAs for JSU Biology Department, 2016 to 2019</li>
+          <li>Interviewed by NASA to promote STEM jobs and jobs within National Park Service</li>
+          <li>Co-advised undergraduate independent research projects on salamander communities and snake mouth bacterial flora</li>
+          <li>Wrote lab exercises and materials for Introduction to Biology Labs</li>
+        </ul>
+      </p>
+
+      <h3>Workshops Attended</h3>
+      <p>
+        <ul>
+          <li>Introduction to SNP Data Analysis via Cyverse: AG2PI</li>
+          <li>Geometric morphometrics in R by Cori Black, Southeastern Fishes Council</li>
+          <li>Venomous snake handling course lvl 1 certification by the Rattlesnake Conservancy</li>
+          <li>Genetic and genomic tools for herpetological conservation, SEPARC</li>
+          <li>FrogWatch USA, Auburn Chapter</li>
+        </ul>
+      </p>
+
+      <h3>References</h3>
+        <p class="refs">Dr. Chis Murdock | murdock@jsu.edu</p>
+        <p class="refs">Dr. James Rayburn | jrayburn@jsu.edu</p>
+        <p class="refs">Dr. Sarah Wofford | sw22ba@fsu.edu</p>
+        <p class="refs">Dr. Lori Hensley | lhensley@jsu.edu</p>
+      </h3>
     </div>
 
     <footer class="footer-container">
