--- a/timeline.html
+++ b/timeline.html
@@ -87,7 +87,7 @@
     </div>
 
     <div class="cv-text">
-        <p>Below you will find a "mind-map" of my research related skills and my CV in timeline form with most recent positions at the top. You can view my traditionally formatted CV <a href="CV.html")>here</a>, or by clicking the button above.</p>
+        <p>Below you will find a "mind-map" of my research related skills, my CV in timeline form with most recent positions at the top, and a list of my publications. You can view my traditionally formatted CV <a href="CV.html")>here</a>, or by clicking the button above.</p>
         <p>To learn more about specific research projects, please see the Research section of my <a href="index.html">About me</a> page. </p>
     </div>
 
@@ -146,7 +146,8 @@
                   <span class="jobtitle">M.S. Biology with distinction</span>
                   <span class="dates">(2018)</span>
                 </div>
-                <p>Thesis title: The phynology of the symbiotic association between <i>Ambystoma maculatum</i> and <i>Oophila amblystomatis</i> using molecular techniques.</p>
+                <p>Thesis title: The phenology of the symbiotic association between <i>Ambystoma maculatum</i> and <i>Oophila amblystomatis</i> using molecular techniques.</p>
+                <a href="https://doi.org/10.1670/19-143">https://doi.org/10.1670/19-143</a>
               </div>
           </li> 
 
@@ -278,6 +279,18 @@
         </ul>
       </div>
     </div>
+
+    <div class="cv-text">
+      <h3>Publications</h3>
+      <p>
+        <ul>
+            <li><strong>McDaniels, G. M.</strong>, K. T. McDaniels, G. R. Cline, C. A. Murdock, and J. R. Rayburn. 2020. The phenology of the symbiotic association between <i>Ambystoma maculatum</i> and unicellular algae (<i>Oophila</i>) using molecular techniques. Journal of Herpetology 54(4). <a href="https://doi.org/10.1670/19-143">https://doi.org/10.1670/19-143</a></li>
+            <li><strong>McDaniels, G. M.</strong>, K. T. McDaniels, and G. R. Cline. 2020. <i>Ambystoma maculatum</i> (Spotted salamander) Polyembryony. Herpetological Review 51(3).</li>
+        </ul>
+      </p>
+    </div>
+
+  </div>
 
     <footer class="footer-container">
         <div class="footer" id="footer">
