--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
     </div>
 
     <section class="about">
+
+      <h2>About me</h2>
+      <hr>
+
       <div class="slideshow">
         <img class="mySlides img-fluid float-left-lg" src="assets/images/griff_research1.jpg">
         <img class="mySlides img-fluid float-left-lg" src="assets/images/griff_ophisaurus.jpg">
@@ -107,15 +111,12 @@
         </script> 
       </div>
 
-      <h2>About me</h2>
-      <hr>
-
-      <p>I am an ecologist and herpetologist interested in linking applied and quantitative ecology to conservation issues and in communicating these issues to the public. I was born and raised in Alabama (a.k.a., home of <a href="https://www.al.com/projects/americas-amazon/")>North America's Amazon</a>) where I developed a great appreciation for its diverse flora and fauna and its breathtaking landscapes. While going to school there (twice, B.S. Zoology at Auburn University and M.S. Biology at Jacksonville State University), I also discovered a deep fondness for southeastern herpetofauna in particular. Outside of work, I like to spend as much time outdoors as I can hiking, fishing, birding, and practicing amateur photography. At home, I have a family made up of a wife (and partner in science), two cats, and a ball python.</p>
+      <p>I am an ecologist and herpetologist interested in linking applied and quantitative ecology to conservation issues and communicating these issues to the public. I was born and raised in Alabama (a.k.a., home of <a href="https://www.al.com/projects/americas-amazon/")>North America's Amazon</a>) where I developed a great appreciation for its diverse flora and fauna and its breathtaking landscapes. While going to school there (twice, B.S. Zoology at Auburn University and M.S. Biology at Jacksonville State University), I also discovered a deep fondness for southeastern herpetofauna in particular. Outside of work, I like to spend as much time outdoors as I can hiking, fishing, birding, and practicing amateur photography. At home, I have a family made up of a wife (and partner in science), two cats, and a ball python.</p>
 
       <h2 style="text-align: center" id="research">Research</h2>
       <hr>
 
-      <p>My MS research focused on the reproductive ecology of the winter-breeding spotted salamander and the role of <i>Oophila amblystomatis</i>, the symbiotic algae found in its eggs. I attempted to answer whether the algae seen in the eggs comes from the environment or the maternal reproductive tract and when this transfer occurs. In sampling salamander egg masses throughout the developmental process across two years and from several wetlands, we confirmed very early stage eggs both with and without algae DNA. We also showed that the vast majority of egg masses contain the algae at earlier stages and that the transfer likely happens within the first few days following egg laying. This project allowed me to experience every step of the research process and showed me the value of good planning and research notes.</p>
+      <p>My MS research focused on the reproductive ecology of the winter-breeding spotted salamander and the role of <i>Oophila amblystomatis</i>, the symbiotic algae found in its eggs. I attempted to answer whether the algae seen in the eggs come from the environment or the maternal reproductive tract and when this transfer occurs. By sampling salamander egg masses throughout the developmental process across two years, we confirmed very early-stage eggs with and without algae DNA. Our results also showed that nearly all egg masses contain the algae at earlier stages and that the transfer likely happens within the first few days following egg laying. This project allowed me to experience every step of the research process and showed me the value of good planning and research notes.</p>
         
       <p>My current research interests are rooted in natural history and response to environmental change. An understanding of a species' role in the biota and its interactions across a landscape is crucial to forming the framework on which conservation decisions are made. Additionally, as the landscape changes, we can use this fundamental ecological picture to model and attempt to predict the responses of the biota driven by these changes. Quantifying these responses and looking for patterns often requires the use of 'big data’ analytical methods like modeling or bioinformatics. A broad geographic assessment of environmental niche or a historical estimate of movement through genetic data can be important tools for conservation of threatened species.</p>
       
@@ -131,13 +132,7 @@
            </blockquote>
             <figcaption>-Baba Dioum, 1968</figcaption>
         </figure>
-        <figure>
-          <blockquote>
-            <p>Education is all about being excited about something. Seeing passion and enthusiasm helps push an educational message.</p>
-          </blockquote>
-          <figcaption>-Steve Irwin</figcaption>
-        </figure>
-        </div>
+      </div>
   
         <p>
         Educational outreach outside of the traditional classroom setting is, I think, an underappreciated conservation tool. Not only is bringing ambassador animals to a public event at a state park and seeing young eyes light up incedably rewarding, but it has reaching effects. Enthusiasm is often contagious and those who experience reptiles and amphibians in a positive light are more likely to stop to safely move a turtle or snake out of the road instead of the alternative.
@@ -160,7 +155,7 @@
         </div>
   
         <p>
-        I started participating in outreach programs at Auburn University in 2015 and later that year served as outreach assistant for the Alabama Natural Heritage Program. At Jackonville State University, I was mentored by someone whose greatest joy was introducing people to reptiles and amphibians and fostering their appreciation. I participated in more than thirty events during my time with George Cline, firmly solidifying my love for educational outreach. 
+        I started participating in outreach programs at Auburn University in 2015 and later that year served as outreach assistant for the Alabama Natural Heritage Program. At Jackonville State University, I was mentored by George Cline, a herpetologist whose greatest joy was introducing people to reptiles and amphibians and fostering their appreciation. During mt time with Dr. Cline I participated in more than thirty events, firmly solidifying my love for educational outreach. 
         </p>
 
     </section>
@@ -169,7 +164,7 @@
       <div class="footer" id="footer">
         <ul class="social-icon">
                 <li class="social-icon_item"><a
-                  class="social-icon_link btn btn-link btn-floating btn-lg text-light m-1"
+                  class="social-icon_link btn btn-link btn-floating btn-lg text-light -1"
                   href="mailto:griffmcd@uark.edu"
                   role="button"
                   data-mdb-ripple-color="light"
