--- a/timeline.html
+++ b/timeline.html
@@ -195,7 +195,7 @@
           <li>
               <div class="content">
                 <div class="tl-item">
-                  <span class="jobtitle">Ammual U.S. Parks Bioblitz Leader</span>
+                  <span class="jobtitle">Annual U.S. Parks Bioblitz Leader</span>
                   <span class="dates">(2016-2018)</span>
                 </div>
                 <p>Lead identification hikes in Little River Canyon from 2016 to 2018.</p>
